integration-tests/src/test/resources/charts/traefik/host-routing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: traefik-hostrouting-1
  namespace: default
spec:
  rules:
  - host: domain1.org
    http:
      paths:
      - path:
        backend:
          serviceName: domain1-cluster-cluster-1
          servicePort: 8001
